added register api call handler and fixed cors issue